tests/pos/target_version/B_2_v3.0.scala
object B extends A:
  def a = 7