tests/neg/mixed_cc/A.scala
package mixed_cc

object A:
  object B
